alignmnet changes are fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 
 body{
     position: relative;
-    height: 100vh;
+//    height: 100vh;
 }
 .account-section{
     position: fixed;
@@ -178,7 +178,7 @@ body{
 }
 .main-bar{
      background: orange;
-        height:100vh;
+    height:100vh;
     padding-right: 0!important;
         padding-left: 0 !important;
     nav{
@@ -216,7 +216,7 @@ body{
     padding:10px;
     
     ul{
-        height:85vh;
+        height:100%;
         overflow: auto;
         li{
             display: flex;
@@ -286,7 +286,7 @@ body{
         left:0;
         right:0;
         z-index:7;
-       background:rgba(0, 0, 0, 0.49); 
+       background:rgba(255, 255, 255, 0.69); 
         width:100% !important;
         transform:translateX(-1200px);
         transition: all 0.3s ease-in;
@@ -301,6 +301,7 @@ body{
         width:135px !important;
         height:135px !important;
     }
+    
     .Users{
         height:258px;
     }
@@ -322,9 +323,10 @@ body{
     }
     .message-box{
     width:100%;
-    height:90vh;
+    height: 88vh;
 //    background: black;
         ul{
+            height:100%;
             z-index:3;
             li{
                 max-width:230px;
@@ -333,6 +335,7 @@ body{
 }
     .input-section{
         bottom:0;
+        
         .input-user-section{
             width:38px;
             height:38px;
@@ -366,10 +369,10 @@ body{
     }
     .message-box{
     width:100%;
-    height:100vh;
+    height:88vh;
 //    background: black;
         ul{
-        height:90vh;
+        height:100%
 //        overflow: auto;
     }
     .input-section{
@@ -377,8 +380,9 @@ body{
         height:100px;
         background: grey;
         position: absolute;
-        bottom:30px;
+        bottom:-80px;
         left:0;
     }
 }
 }
+
